# project2_Vylegjanina_m25-555

./: .gitignore  Makefile  README.md  pyproject.toml
data/: db_meta.json
src/: decorators.py
src/primitive_db/: constants.py  core.py  engine.py  main.py  parser.py  utils.py
